--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "axios": "^1.6.8",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
-    "react-typed": "^2.0.12"
+    "react-select": "^5.8.0",
+    "react-typed": "^2.0.12",
+    "styled-components": "^6.1.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
