--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mon": "^0.0.8",
     "mongoose": "^8.1.1",
     "node": "^21.6.1",
+    "nodemailer": "^6.9.13",
     "nodemon": "^3.0.3",
     "validator": "^13.11.0",
     "winston": "^3.11.0",
